# xps-peakfit

./: .gitignore  LICENSE  README.en.md  README.md  app_streamlit.py  pyproject.toml
.github/workflows/: test.yml
benchmarks/: RESULTS.md  VALIDATION.md  benchmark_empeaks.py  benchmark_series.py  casestudy_gan_oxidation.py  validation_coverage.py  validation_montecarlo.py
data/: XPS_Au4f.csv  XPS_C1s.csv  XPS_Cr2p.csv  XPS_Ni2p.csv  XPS_Si2p.csv  XPS_Si2p_siloxane_synthetic.csv
data2/: 1804100005_dsp.csv  1804100010_dsp.csv  1804100015_dsp.csv  1804100020_dsp.csv  1804100035_dsp.csv  1804100065_dsp.csv  1804100095_dsp.csv  1804100125_dsp.csv  1804100155_dsp.csv  1804100185_dsp.csv  1804100215_dsp.csv  1804100245_dsp.csv  1804100275_dsp.csv  1804100300_dsp.csv  1804100335_dsp.csv  1804100340_dsp.csv  README.md
legacy/: xps_gui.py  xps_peak_fit_gui.py  xps_peak_fit_gui_v2.py  xps_peak_fitting_batch.py
legacy/xps_flask/: app.py  app_v2.py  app_v3.py  app_v4.py  app_v5.py  requirements.txt  requirements_py37.txt
legacy/xps_flask/templates/: index.html  result.html
legacy/xps_flask/templates_old/: index.html  result.html
legacy/xps_flask/templates_scipy/: index.html  result.html
tests/: test_autorange.py  test_background.py  test_benchmark_gan.py  test_benchmark_lines.py  test_benchmark_ng.py  test_fitting.py  test_io.py  test_io_hv.py  test_model_select.py  test_models.py  test_new_features.py  test_series.py
xps_peakfit/: __init__.py  autorange.py  background.py  cli.py  fitting.py  io.py  lines.py  model_select.py  models.py  series.py  uncertainty.py
